# introligo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install_hooks.sh  introligo.py  pyproject.toml  setup.py
.claude/: claude.md
.github/workflows/: deploy-docs.yml  lint.yml  publish-pypi.yml  tests.yml
docs/: conf.py  preview.py
docs/composition/: introligo_config.yaml
docs/composition/markdown/: best_practices.md
docs/composition/markdown/devcontainer_tutorial/: devcontainer_setup.md  devcontainer_usage.md
docs/composition/markdown/diagrams/: diagram_tutorial.md
docs/composition/markdown/getting_started/: getting_started.md
docs/composition/markdown/language_support/: cpp_language.md  go_language.md  java_language.md  latex_support.md  overview.md  protobuf_language.md  python_language.md  rust_language.md
docs/composition/markdown/md_tutorial/: basic_usage.md  best_practices.md  link_conversion.md  working_with_images.md
docs/composition/markdown/sphinx_tutorial/: 04_advanced.md
examples/: .gitignore  EXAMPLES.md  README.md  hub_example.yaml  introligo_with_custom_palette.yaml  introligo_with_cycling_theme.yaml  introligo_with_fantasy-world_theme.yaml  introligo_with_rose-explosion_theme.yaml  introligo_with_steampunk_theme.yaml  introligo_with_swing_theme.yaml
examples/c_project/: introligo_config.yaml
examples/c_project/docs/: conf.py
examples/complex_project/: CHANGELOG.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  build_docs.sh  introligo_config.yaml
examples/complex_project/diagrams/: class_diagram.puml  close_algorithm.mmd  initialization.mmd  open_algorithm.mmd
examples/complex_project/src/: Contractor.cpp  Contractor.h  Servo.cpp  Servo.h  SmartDoor.cpp  SmartDoor.h
examples/diagram_project/: README.md  introligo_config.yaml
examples/diagram_project/diagrams/: architecture.dot  class_diagram.puml  flowchart.mmd  sequence.puml
examples/go_project/: README.md  introligo_config.yaml
examples/go_project/calculator/: calculator.go
examples/hub_project/: introligo_config.yaml
examples/java_project/: README.md  introligo_config.yaml
examples/java_project/com/example/calculator/: Calculator.java  MathUtils.java
examples/latex_project/docs/: conf.py
examples/protobuf_project/: introligo_config.yaml
examples/protobuf_project/docs_markdown/: integration_examples.md  notification_service.md  order_service.md  payment_service.md  product_service.md  system_overview.md  user_service.md
examples/protobuf_project/protos/: notification.proto  order.proto  payment.proto  product.proto  user.proto
examples/python_project/: README.md  introligo_config.yaml
examples/python_project/docs/: conf.py
examples/rst_project/: api_details.rst  tutorial.rst
examples/rst_project/docs/: conf.py
examples/rust_project/: Cargo.toml  introligo_config.yaml
examples/rust_project/src/: lib.rs
introligo/: __init__.py  __main__.py  colored_formatter.py  generator.py  godoc_extractor.py  javadoc_extractor.py  markdown_converter.py  protobuf_diagram_generator.py  protodoc_extractor.py  rustdoc_extractor.py  utils.py  yaml_loader.py
introligo/palettes/: cycling.yaml  fantasy-world.yaml  palettes.json  rose-explosion.yaml  steampunk.yaml  swing.yaml
introligo/templates/: conf.py.jinja2  default.jinja2
tests/: conftest.py  test_additional_coverage.py  test_colored_formatter.py  test_coverage.py  test_generator.py  test_generator_additional_coverage.py  test_godoc_extractor.py  test_hub.py  test_include_loader.py  test_init.py  test_javadoc_extractor.py  test_main.py  test_markdown_link_conversion.py  test_page_node.py  test_protobuf_diagram_generator.py  test_protodoc_extractor.py  test_rst_includes.py  test_rustdoc_extractor.py  test_rustdoc_extractor_comprehensive.py  test_sphinx_palette.py  test_utils.py
tools/: generate_motifs.py
