[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "introligo"
version = "1.1.0"
authors = [
    {name = "Jakub Brzezowski", email = "brzezoo@gmail.com"}
]
description = "YAML to reStructuredText documentation generator for Sphinx"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
keywords = ["documentation", "sphinx", "rst", "yaml", "generator", "doxygen", "breathe"]

dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0",
    "furo>=2023.3.27",
]
cpp = [
    "breathe>=4.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/JakubBrzezo/introligo"
Documentation = "https://jakubbrzezo.github.io/introligo"
Repository = "https://github.com/JakubBrzezo/introligo"
"Bug Tracker" = "https://github.com/JakubBrzezo/introligo/issues"
Changelog = "https://github.com/JakubBrzezo/introligo/blob/master/CHANGELOG.md"

[project.scripts]
introligo = "introligo:main"

[tool.setuptools]
packages = ["introligo"]

[tool.setuptools.package-data]
introligo = ["templates/*.jinja2"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
