[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "introligo"
dynamic = ["version"]
authors = [
    {name = "Jakub Brzezowski", email = "jakubbrzez@wp.pl"}
]
description = "Professional Sphinx documentation generator with intelligent auto-discovery. Automatically finds and unifies READMEs, changelogs, markdown guides, and API docs into beautifully organized documentation sites."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
keywords = ["documentation", "sphinx", "rst", "yaml", "generator", "doxygen", "breathe"]

dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.0",
    "sphinx>=4.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
docs = [
    "furo>=2023.3.27",
]
cpp = [
    "breathe>=4.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "watchdog>=3.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pylint>=3.0.0",
    "interrogate>=1.5.0",
    "xenon>=0.9.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/JakubBrzezo/introligo"
Documentation = "https://jakubbrzezo.github.io/introligo"
Repository = "https://github.com/JakubBrzezo/introligo"
"Bug Tracker" = "https://github.com/JakubBrzezo/introligo/issues"
Changelog = "https://github.com/JakubBrzezo/introligo/blob/master/CHANGELOG.md"

[project.scripts]
introligo = "introligo:main"

[tool.setuptools]
packages = ["introligo"]

[tool.setuptools.package-data]
introligo = ["templates/*.jinja2"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["__pycache__", "*.pyc", ".git", "docs/_build", "docs/_motif_preview"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["introligo"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = ["examples/", "docs/"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "colorama"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "introligo._version"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint.main]
py-version = "3.8"
ignore-paths = ["^tests/.*$", "^examples/.*$", "^docs/.*$"]
jobs = 0  # Use all CPUs

[tool.pylint.messages_control]
disable = [
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0912",  # too-many-branches
    "W1203",  # logging-fstring-interpolation (f-strings in logging are fine)
    "W0718",  # broad-exception-caught (catching Exception is intentional)
    "W1510",  # subprocess-run-check (we check returncode manually)
    "R1705",  # no-else-return (else after return is readable)
    "C0302",  # too-many-lines (some modules are necessarily large)
    "W0613",  # unused-argument (needed for API compatibility)
    "R0911",  # too-many-return-statements
    "R0902",  # too-many-instance-attributes
    "R1702",  # too-many-nested-blocks
    "C0415",  # import-outside-toplevel (sometimes needed)
    "R0901",  # too-many-ancestors (YAML loader inheritance)
    "R0917",  # too-many-positional-arguments
    "R0904",  # too-many-public-methods
    "R0903",  # too-few-public-methods
    "R0801",  # duplicate-code (similar patterns are intentional)
    "C0301",  # line-too-long (ruff already checks this)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 10

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "tests", "examples"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[tool.coverage.run]
branch = true
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
write_to = "introligo/_version.py"
write_to_template = '''
"""Version information for introligo package.

This file is auto-generated by setuptools_scm.
Do not edit manually.
"""
__version__ = "{version}"
'''
